--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/jmorriseau/schEDUle/issues"
   },
-  "homepage": "https://github.com/jmorriseau/schEDUle#readme"
+  "homepage": "https://github.com/jmorriseau/schEDUle#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0"
+  }
 }
