--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
+    "jQuery": "^1.7.4",
     "jquery": "^3.1.1"
   }
 }
