--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-uglify": "^2.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.16.0",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jQuery": "^1.7.4",
